--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
                 <th style="color:8B0000">Time to Cook</th>
             </tr>
             <tr>
-                <td style="color:8B0000"><a href="Chicken_Fajitas.pdf">Uncle Tommy's Chicken Fajitas</a></td>
+                <td style="color:8B0000"><a href="Chicken_Fijitas.pdf">Uncle Tommy's Chicken Fajitas</a></td>
                 <td style="color:8B0000">25 Minutes</td>
             </tr>
             <tr>
@@ -62,23 +62,23 @@
                 <td style="color:8B0000">30 Minutes</td>
             </tr>
             <tr>
-                <td style="color:8B0000">Giant Spicy Meatballs with Rice</td>
+                <td style="color:8B0000"><a href ="meatballs.pdf">Giant Spicy Meatballs with Rice</a></td>
                 <td style="color:8B0000">1 Hour</td>
             </tr>
             <tr>
-                <td style="color:8B0000">Microwave Tomato Risotto</td>
+		    <td style="color:8B0000"><a href ="microwave.pdf">Microwave Tomato Risotto</a>td>
                 <td style="color:8B0000">25 Minutes</td>
             </tr>
             <tr>
-                <td style="color:8B0000">Broccoli Pesto Pasta</td>
+		    <td style="color:8B0000"><a href="pasta.pdf"> Pesto Pasta</a></td>
                 <td style="color:8B0000">25 Minutes</td>
             </tr>
             <tr>
-                <td style="color:8B0000">Pasta with Mushrooms</td>
+		    <td style="color:8B0000"><a href="mushrooms.pdf">Pasta with Mushrooms</a></td>
                 <td style="color:8B0000">20 Minutes</td>
             </tr>
             <tr>
-                <td style="color:8B0000">Pulled Pork</td>
+		    <td style="color:8B0000"><a href="pulledpork.pdf">Pulled Pork</a></td>
                 <td style="color:8B0000">4-8 Hours</td>
             </tr>
             </table>
